<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:text="akun"/>

        <LinearLayout
            android:id="@+id/ProfileDosen"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:background="@drawable/content_informasi"
            android:foreground="?android:attr/selectableItemBackground"
            android:focusable="true"
            android:elevation="2dp"
            android:clickable="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imvInfoDosen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="15dp"/>

            <TextView
                android:id="@+id/tvUsernameDosen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:clickable="false"
                android:text="Username"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tvInfoLogoutDosen"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="10dp"
            android:elevation="2dp"
            android:background="@drawable/content_informasi"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_exit_to_app_black_24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:clickable="false"
                android:text="Keluar"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="5dp"
            android:textSize="14sp"
            android:text="Tentang"/>

        <LinearLayout
            android:id="@+id/tvInfoMangoDosen"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="10dp"
            android:elevation="2dp"
            android:background="@drawable/content_informasi"
            android:foreground="?android:attr/selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_feedback_black_24dp"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="15dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:clickable="false"
                android:text="Tentang Mango"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>